fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+body,
 #root {
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
